# src/main/java/com/anikanov02/selfhost/domain/dto/message/MessageDto.java
@@ -9,4 +9,5 @@ import java.util.UUID;
 @Setter
 public class MessageDto extends MessageBaseDto {
     private UUID id;
+    private boolean userMessage;
 }
